syntax = "proto3";

package payments;

service Payment {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string orderId = 1;
  double amount = 2;
}

message PaymentResponse {
  bool success = 1;
  string message = 2;
}